# devops-engineer-from-scratch-project-313

./: .dockerignore  .env  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  conftest.py  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  start.sh  test.db  test_app.py  test_basic.py  test_links.py  test_pagination.py
.github/workflows/: ci.yml
app/: config.py  database.py  main.py  models.py  repository.py
app/routers/: links.py  redirect.py
tests/: test_app.py  test_links.py  test_pagination.py
