[project]
name = "devops-engineer-from-scratch-project-313"
version = "0.1.0"
description = "DevOps Engineer learning project for PaaS deployment"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Sergey Mazov", email = "sergeymazov@example.com"}
]
dependencies = [
    "fastapi>=0.128.8",
    "uvicorn>=0.39.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
    "/app",
    "/README.md",
    "/pyproject.toml",
    "/Makefile",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"